--- a/blocks/results-list-block/_index.scss
+++ b/blocks/results-list-block/_index.scss
@@ -11,6 +11,11 @@
 		@include scss.block-components("results-list-show-image");
 	}
 
+	&__seeMore {
+		@include scss.block-properties("results-list-see-more");
+		@include scss.block-components("results-list-see-more");
+	}
+
 	&__label {
 		@include scss.block-components("results-list-label");
 		@include scss.block-properties("results-list-label");
